--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
             content="Web site created using create-react-app"
         />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-        <title>React Psychology App</title>
+        <title>React Rick and Morty App</title>
     </head>
     <body>
         <div id="root"></div>
